# ordne

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  classification.toml.example  flake.nix  prune.toml.example  status.md  validate_indexing.sh  verify.sh
.github/workflows/: docs.yml
crates/ordne/: Cargo.toml
crates/ordne-mcp/: Cargo.toml
crates/ordne-mcp/src/: main.rs  server.rs
crates/ordne/src/: config.rs  error.rs  lib.rs  main.rs  policy.rs
crates/ordne/src/classify/: README.md  interactive.rs  rules.rs
crates/ordne/src/cli/: classify.rs  dedup.rs  drive.rs  helpers.rs  migrate.rs  mod.rs  plan.rs  policy.rs  query.rs  report.rs  rmlint.rs  run_policy.rs  scan.rs  status.rs  verify.rs
crates/ordne/src/db/: drives.rs  duplicates.rs  files.rs  mod.rs  plans.rs
crates/ordne/src/index/: dedup.rs  device.rs  hasher.rs  mod.rs  rmlint_import.rs  scanner.rs
crates/ordne/src/migrate/: README.md  engine.rs  hash.rs  planner.rs  rclone.rs  rollback.rs  rsync.rs  space.rs
crates/ordne/src/util/: mod.rs  progress.rs
crates/prune/: Cargo.toml
crates/prune-mcp/: Cargo.toml
crates/prune-mcp/src/: main.rs  server.rs
crates/prune/src/: config.rs  error.rs  lib.rs  main.rs
crates/prune/src/classify/: README.md  mod.rs  rules.rs
crates/prune/src/cli/: classify.rs  drive.rs  helpers.rs  migrate.rs  mod.rs  plan.rs  query.rs  report.rs  scan.rs  status.rs  verify.rs
crates/prune/src/db/: audit.rs  drives.rs  duplicates.rs  files.rs  mod.rs  plans.rs  schema.rs
crates/prune/src/index/: device.rs  hasher.rs  rmlint.rs  scanner.rs
crates/prune/src/migrate/: README.md  engine.rs  hash.rs  mod.rs  planner.rs  rclone.rs  rollback.rs  rsync.rs  space.rs
crates/prune/src/util/: format.rs  progress.rs
docs/: api.md  classification-guide.md  cli.md  indexing-module.md  mcp-server.md  policy.md  quick-reference.md  spec.md
docs/site/: index.html
examples/: indexing_example.rs  mcp-config.json
tests/common/: helpers.rs  mod.rs
tests/fixtures/: rmlint_sample.json
tests/integration/: classify_test.rs  indexing_test.rs  migrate_test.rs  mod.rs  safety_test.rs
