[workspace]
members = ["crates/ordne", "crates/ordne-mcp"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ryan <ryan@example.com>"]
license = "MIT"
repository = "https://github.com/youruser/ordne"

[workspace.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
md-5 = "0.10"
blake3 = "1"
indicatif = "0.17"
comfy-table = "7"
globset = "0.4"
walkdir = "2"
dialoguer = "0.11"
console = "0.15"
kamadak-exif = "0.5"
xdg = "2.5"
log = "0.4"
libc = "0.2"
tokio = { version = "1", features = ["full"] }
