[package]
name = "ordne-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for ordne - exposes file management operations to AI agents"

[[bin]]
name = "ordne-mcp"
path = "src/main.rs"

[dependencies]
ordne = { path = "../ordne" }
rmcp = { version = "0.12", features = ["server"] }
rmcp-macros = "0.12"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "1.2"
anyhow = { workspace = true }
clap = { workspace = true }
xdg = { workspace = true }
log = "0.4"
env_logger = "0.11"
chrono = { workspace = true }
rusqlite = { workspace = true }
