[package]
name = "ordne"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Safe file deduplication, classification and migration tool"

[lib]
name = "ordne_lib"
path = "src/lib.rs"

[[bin]]
name = "ordne"
path = "src/main.rs"

[dependencies]
rusqlite = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
md-5 = { workspace = true }
blake3 = { workspace = true }
indicatif = { workspace = true }
comfy-table = { workspace = true }
globset = { workspace = true }
walkdir = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
exif = { package = "kamadak-exif", version = "0.5" }
xdg = { workspace = true }
log = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
proptest = "1"
insta = "1"
