[package]
name = "prune-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP server for prune - exposes file management operations to AI agents"

[[bin]]
name = "prune-mcp"
path = "src/main.rs"

[dependencies]
prune = { path = "../prune" }
rmcp = { version = "0.12", features = ["server"] }
rmcp-macros = "0.12"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = "1.2"
anyhow = { workspace = true }
clap = { workspace = true }
xdg = { workspace = true }
log = "0.4"
env_logger = "0.11"
chrono = { workspace = true }
rusqlite = { workspace = true }
